feat:增加HTTP常见的五种传输数据方式和nest实现。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nest-study",
   "version": "0.0.1",
-  "description": "",
+  "description": "NestJS学习记录",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
