--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.10",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -43,7 +45,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.2",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.15",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
