--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/express-session": "^1.18.0",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
@@ -37,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
+    "express-session": "^1.18.0",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
